ensure elaboration is at least as wide as need fix need button spacing

--- a/src/styles/need.scss
+++ b/src/styles/need.scss
@@ -7,11 +7,11 @@ $block-class: 'need';
         position: relative;
         border: 1px solid $brand-background-color-pale;
         border-radius: 1px;
-        padding: 2px 6px;
+        padding: 2px;
         margin-right: 4px;
 
         &__button {
-            padding-left: 4px;
+            padding: 0 4px;
             cursor: pointer;
 
             &:hover + .#{$block-class}__elaboration {
@@ -24,6 +24,7 @@ $block-class: 'need';
             position: absolute;
             top: 100%;
             left: -1px;
+            min-width: calc(100% - 12px);
             overflow: visible;
             white-space: nowrap;
             background-color: $brand-background-color;
